Version 1.0

2005-05-25:
	
	* solved problems install-problems: use at least scons 0.96.90
	* minor tweaks to buildsystem

2005-05-24:

	* updated documentation
	* updated buildsystem, scons install works
	* rewritten README to be also in asciidoc-format
	* more consistency in the ui, updated documentation
	* added -auth md5:file=<filename>
	* added -auth sha1:file=<filename>
	* rename -cursor font to -cursor glyph

2005-05-23:

	* added -bg image:shade=<perc>
	* little restructuring:
		- added alock_utils.c for shared code
		- mv bg_imlib2.c bg_image.c

2005-05-20:

	* added -bg shade:
		- shade=<perc> - percentage, 0 - 100
		- color=<color> - tint with <color>, default is "black"

2005-05-18:

	* fixed minor issues with defaults
	* deleted fancy contrib/xcursor-watch (too big)
	* added even more fancy contrib/xcursor-fluxbox
	* added -bg image:
		- name - name of the image
		- scale - scaling image
		- center - centering image
		- tile - tile image
		- color=<color> - use <color> as bg-color for centering
	* -bg blank uses the color-option now

2005-05-17:

	* restructuring almost done, polished interface:
		: working -bg, -auth and -cursor with all the submodules
		- cleaned -h
		- complete -flag - parsing
	* added -cursor font:list and -cursor theme:list
	* added -cursor none, doesnt change cursor

2005-05-16:

	* updated documention

2005-05-14:

	* started documention, using asciidoc

2005-05-09:

	* changed project-name to 'alock':
		+ simpler, better name
		+ i want to dedicate it to my gf: anja
	* minor fixes

2005-05-08:

	* changed the auth_md5.c - code to the openbsd-version (public domain)
	* added auth_sha1.c - also from openbsd-codebase, also public domain
	* added two stand-alone programs to calculate md5/sha1 hashs:
		+ src/asha1 - reads from stdin, EOF ends
		+ src/amd5 - reads from stdin, EOF ends
		(just in case your system DOESNT have md5/md5sum or sha1/sha1sum
	* minor changes to aklock.c

2005-05-07:
