@@ -1,7 +1,7 @@
 alock - README
 ==============
 Mathias Gumz <akira@fluxbox.org>
-v1.0, 24 May 2005
+v1.0, 01 June 2005
 
 About
 -----
