@@ -32,6 +32,18 @@
 /*------------------------------------------------------------------*\
     globals
 \*------------------------------------------------------------------*/
+extern struct aAuth alock_auth_none;
+#ifdef HASH_PWD
+extern struct aAuth alock_auth_md5;
+extern struct aAuth alock_auth_sha1;
+#endif /* HASH_PWD */
+#ifdef PASSWD_PWD
+extern struct aAuth alock_auth_passwd;
+#endif /* PASSWD_PWD */
+#ifdef PAM_PWD
+extern struct aAuth alock_auth_pam;
+#endif /* PAM_PWD */
+
 static struct aAuth* alock_authmodules[] = {
     &alock_auth_none,
 #ifdef PAM_PWD
@@ -46,6 +58,16 @@ static struct aAuth* alock_authmodules[] = {
 #endif /* HASH_PWD */
     NULL
 };
+/*------------------------------------------------------------------*\
+\*------------------------------------------------------------------*/
+extern struct aBackground alock_bg_none;
+extern struct aBackground alock_bg_blank;
+#ifdef HAVE_IMLIB2
+extern struct aBackground alock_bg_image;
+#endif /* HAVE_IMLIB2 */
+#ifdef HAVE_XRENDER
+extern struct aBackground alock_bg_shade;
+#endif /* HAVE_XRENDER */
 
 static struct aBackground* alock_backgrounds[] = {
     &alock_bg_none,
@@ -58,6 +80,17 @@ static struct aBackground* alock_backgrounds[] = {
 #endif /* HAVE_XRENDER */
     NULL
 };
+/* ---------------------------------------------------------------- *\
+\* ---------------------------------------------------------------- */
+extern struct aCursor alock_cursor_none;
+extern struct aCursor alock_cursor_theme;
+extern struct aCursor alock_cursor_glyph;
+#ifdef HAVE_XCURSOR
+extern struct aCursor alock_cursor_xcursor;
+#endif /* HAVE_XCURSOR */
+#ifdef HAVE_XRENDER
+extern struct aCursor alock_cursor_image;
+#endif /* HAVE_XRENDER */
 
 static struct aCursor* alock_cursors[] = {
     &alock_cursor_none,
@@ -66,6 +99,9 @@ static struct aCursor* alock_cursors[] = {
 #ifdef HAVE_XCURSOR
     &alock_cursor_xcursor,
 #endif /* HAVE_XCURSOR */
+#ifdef HAVE_XRENDER
+    &alock_cursor_image,
+#endif /* HAVE_XRENDER */
     NULL
 };
 /*------------------------------------------------------------------*\
